--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # -----------------------------------------------------------------------------
 # Site settings
 # -----------------------------------------------------------------------------
-name: Mark Dean
-email: mdean@bnl.gov
+name: Rafal Kucharski 
+email: r.m.kucharski@tudelft.nl
 description: > # this means to ignore newlines until "url:"
-  Resonant x-ray scattering on quantum materials at Brookhaven.
+  Urban Mobility: Modelling, Algorithms, Design and Optimization
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
@@ -17,10 +17,10 @@ last_updated: # leave blank if you don't want to display last updated
 # -----------------------------------------------------------------------------
 # Social integration
 # -----------------------------------------------------------------------------
-github_username: mpmdean # your GitHub user name
+github_username: rafalkucharskiPK # your GitHub user name
 #_QY twitter_username: # your Twitter handle
 #_QY linkedin_username: # your LinkedIn user name
-scholar_userid: mpmdean@gmail.com # your Google Scholar ID
+scholar_userid: rafalkucharski.box@gmail.com # your Google Scholar ID
 orcid_id: 0000-0001-5139-3543 # your ORCID ID
 #_QY medium_username: # your Medium username
 #_QY quora_username: # your Quora username
