--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,12 @@ last_updated: # leave blank if you don't want to display last updated
 # -----------------------------------------------------------------------------
 github_username: rafalkucharskiPK # your GitHub user name
 #_QY twitter_username: # your Twitter handle
-#_QY linkedin_username: # your LinkedIn user name
-scholar_userid: rafalkucharski.box@gmail.com # your Google Scholar ID
-orcid_id: 0000-0001-5139-3543 # your ORCID ID
+linkedin_username: rafalkucharski # your LinkedIn user name
+scholar_userid: z3bOMUAAAAAJ # your Google Scholar ID
+orcid_id: 0000-0002-9767-8883 # your ORCID ID
 #_QY medium_username: # your Medium username
 #_QY quora_username: # your Quora username
+research_gate_profile: Rafal_Kucharski
 
 contact_note: >
   Email is usually the best way to reach me.
